--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="row py-3">
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Hard skill</h4>
+            <h4 class="wow fadeInUp">Hard skills</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">JavaScript</span>
               <div class="progress">
@@ -249,7 +249,7 @@
 
       <div class="gridder my-3">
         <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/rsudatam.png" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Company Profile, Portal</p> <a href='https://rsud.acehtamiangkab.go.id/' target='_blank' class='btn btn-theme-outline' type='button'>View</a>">
+          <div class="img-place" data-src="assets/img/work/rsudatam.png" data-fancybox data-caption="<h5 class='fg-theme'>Portal RSUD Aceh Tamiang</h5> <p>Company Profile, Portal</p> <a href='https://rsud.acehtamiangkab.go.id/' target='_blank' class='btn btn-theme-outline' type='button'>View</a>">
             <img src="assets/img/work/rsudatam.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Portal RSUD Aceh Tamiang</h5>
@@ -267,11 +267,11 @@
           </div>
         </div>
         <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/apod.png" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Peleyanan Desa, Informasi</p>">
+          <div class="img-place" data-src="assets/img/work/apod.png" data-fancybox data-caption="<h5 class='fg-theme'>APOD Desa Teupin Keubeu</h5> <p>Peleyanan Desa, Informasi</p>">
             <img src="assets/img/work/apod.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">APOD Desa Teupin Keubeu</h5>
-              <p>Peleyanan Desa, Informasi</p>
+              <p>Pelayanan Desa, Informasi</p>
             </div>
           </div>
         </div>
